--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
     "require": {
         "php": ">=7.1",
         "laravel/framework": "^5.5",
-        "predis/predis": "^1.1"
+        "predis/predis": "^1.1",
+        "barryvdh/laravel-debugbar": "^3.1"
     },
     "autoload": {
         "psr-4": {
