Add .gitignore + change INSTALL + publishing config + composer autoload classmap database

--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,10 @@
         "psr-4": {
             "xkamen06\\pms\\Controllers\\": "src/Controllers/",
             "xkamen06\\pms\\": "src/"
-        }
+        },
+        "classmap": [
+            "database/"
+        ]
     },
     "extra": {
         "laravel": {
